syntax = "proto3";

import "app/improving/product/domain/product_context_domain.proto";
import "common_domain.proto";

package app.improving.productcontext.product;

message Product {
    Sku sku = 1;
    ProductInfo info = 2;
    ProductMetaInfo meta = 3;
    ProductStatus status = 4;
}

message ProductState {
    Product product = 1;
}